Bug 435586 - Message "Unable to create io-slave. klauncher said: Unknown protocol 'tags'." appears on every Dolphin launch
Summary: Message "Unable to create io-slave. klauncher said: Unknown protocol 'tags'."...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-04-10 15:18 UTC by Christoph Feck
Modified: 2021-05-19 02:31 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 21.04.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christoph Feck 2021-04-10 15:18:58 UTC
SUMMARY

I use Dolphin (and the rest of the system) built without baloo dependencies.

Since a recent frameworks change, I get this error message on every new Dolphin window:

    Unable to create io-slave. klauncher said: Unknown protocol 'tags'.

I didn't update Dolphin, so I suspect the issue is in the frameworks code.
Comment 1 Stefan Brüns 2021-04-12 15:56:27 UTC
*Not* a baloo bug.

Dolphin should check if an implementation for the protocol is defined, e.g. /usr/share/kservices5/tags.protocol
Comment 2 Nate Graham 2021-04-12 20:36:34 UTC
OK, that makes sense.
Comment 3 Andreas Sturmlechner 2021-05-08 14:12:42 UTC
I just got this with KIO-5.82.0 and dolphin-20.12.3, so the question is what has changed...
Comment 4 Andreas Sturmlechner 2021-05-08 14:34:42 UTC
Yup, no error when just downgrading to KIO-5.81.0.
Comment 5 Andreas Sturmlechner 2021-05-08 15:19:11 UTC
Sorry, what's actually happening is the error is still visible in the terminal, but not manifesting as an error dialog box.
Comment 6 Ahmad Samir 2021-05-08 18:39:45 UTC
It looks like KCoreDirLister is created on tags:/ even if baloo isn't found at build time:
void DolphinFacetsWidget::updateTagsMenu()
{
    updateTagsMenuItems({}, {});
    m_tagsLister.openUrl(QUrl(QStringLiteral("tags:/")), KCoreDirLister::OpenUrlFlag::Reload);
}
Comment 7 Andreas Sturmlechner 2021-05-08 19:30:11 UTC
(In reply to Ahmad Samir from comment #6)
> void DolphinFacetsWidget::updateTagsMenu()
> {
>     updateTagsMenuItems({}, {});
>     m_tagsLister.openUrl(QUrl(QStringLiteral("tags:/")),
> KCoreDirLister::OpenUrlFlag::Reload);
> }
dolphin startup error is gone after ifdef'ing the KCoreDirLister line behind HAVE_BALOO, but I can still trigger it by right clicking into the dolphinview, effectively cancelling context menu.
Comment 8 Andreas Sturmlechner 2021-05-08 19:38:45 UTC
(In reply to Andreas Sturmlechner from comment #7)
> but I can still trigger it by right clicking into the
> dolphinview, effectively cancelling context menu.
Nevermind - that was just baloo-widgets still being installed.
Comment 9 Bug Janitor Service 2021-05-10 09:58:38 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/208
Comment 10 Ismael Asensio 2021-05-13 13:01:35 UTC
Git commit 29636baff0f0cf8d769aa75b1c458b96cf83b828 by Ismael Asensio.
Committed on 10/05/2021 at 12:05.
Pushed by sandsmark into branch 'release/21.04'.

search/facetswidget: Check for protocol before trying to fetch tags

This was causing an error when trying to list items from the
non-existent `tags:` protocol.
FIXED-IN: 21.04.1

M  +4    -1    src/search/dolphinfacetswidget.cpp

https://invent.kde.org/system/dolphin/commit/29636baff0f0cf8d769aa75b1c458b96cf83b828