search/facetswidget: Check for protocol before trying to fetch tags

This was causing an error when trying to list items from the
non-existent `tags:` protocol.

BUG: 435586
FIXED-IN: 21.04.1